# oca-port

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml  publish.yml  test.yml
oca_port/: __init__.py  app.py  cli.py  exceptions.py  migrate_addon.py  misc.py  port_addon_pr.py  squash_bot_commits.py
oca_port/cli/: main.py  pr.py
oca_port/tests/: common.py  test_app.py  test_branches_diff.py  test_migrate_addon.py  test_utils_cache.py  test_utils_git.py  test_utils_github.py  test_utils_misc.py  test_utils_session.py
oca_port/tests/data/: manifest.py
oca_port/utils/: __init__.py  cache.py  git.py  github.py  misc.py  session.py  storage.py
tests/: common.py  test_app.py  test_utils_git.py  test_utils_github.py  test_utils_misc.py
